# Flight-Management-System

./: .gitignore  CMakeLists.txt  Main.qml  README-zh  README-zh.md  README.md  commit_stats1.txt  main.cpp
android/: AndroidManifest.xml
api/: networkhandler.h
backend/: CMakeLists.txt  main.cpp
backend/aichat/: aichat.cpp  aichat.h
backend/api/favorite/: FavoritesApi.cpp  FavoritesApi.h
backend/api/flight/: FlightAPi.cpp  FlightApi.cpp  FlightApi.h  FlightInfo.cpp  FlightInfo.h
backend/api/login/: login.cpp  login.h
backend/api/order/: CreateOrderApi.cpp  CreateOrderApi.h  OrderApi.cpp  OrderApi.h  OrderInfo.h
backend/api/register/: register.cpp  register.h
backend/api/user/: user.cpp  user.h
backend/api/userlist/: userlist.cpp  userlist.h
backend/config/: ai.json  ai.qrc  database_config.json  database_config.qrc  database_config.template.json
backend/database/: databasemanager.cpp  databasemanager.h
backend/doc/: LoginAndReg.md  aichat.md  flight.md  getFlight.md
backend/dto/: create_order.cpp  create_order.h  flight_del_dto.cpp  flight_del_dto.h  flight_dto.cpp  flight_dto.h  flight_favorite_dto.cpp  flight_favorite_dto.h  flight_info_dto.cpp  flight_info_dto.h  flight_update_dto.cpp  flight_update_dto.h  get_flights_dto.cpp  get_flights_dto.h  login_dto.cpp  login_dto.h  order_dto.cpp  order_dto.h  order_info_dto.cpp  order_info_dto.h  register_dto.cpp  register_dto.h  response_dto.cpp  response_dto.h  send_code.cpp  send_code.h  update_user_dto.cpp  update_user_dto.h  user_dto.cpp  user_dto.h  userlist_dto.cpp  userlist_dto.h
backend/util/: easycrypt.cpp  easycrypt.h  networkhandler.cpp  networkhandler.h
components/: FlightInfoCard.qml  NewList.qml  NoteCard.qml  NoteList.qml
fetchFlights/: database_config.template.json  go.mod  main.go  main.js  nums.json  result.json
frontend/: CMakeLists.txt  Main.qml  main.cpp
frontend/android/: AndroidManifest.xml
frontend/api/: networkhandler.cpp  networkhandler.h
frontend/components/: FlightInfoCard.qml  OrderInfoCard.qml  TimeProgressBar.qml
frontend/storage/: userinfo.h
frontend/views/: ClientServer.qml  EditPersonalInfo.qml  FlightInfoView.qml  HomeView.qml  Login.qml  OrderDetailView.qml  OrdersView.qml  ProfileView.qml  Register.qml  login.qml
microBackend/: app.js  package-lock.json  package.json  pnpm-lock.yaml  smtp.template.json
views/: FlightInfoView.qml  HomeView.qml  NoteDetailView.qml  OrdersView.qml  ProfileView.qml
